# dpdzero-Assignment

./: README.md  docker-compose.yml
service_1/: go.mod
service_2/: Dockerfile  pyproject.toml
