[tool.poetry]
name = "service2"
version = "0.1.0"
description = "Flask service in Docker"
authors = ["Chebrolu Pavana Pranavi <pavanachebrolu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
